Fix Setup.vbs for users that don't have Admin privileges Add support for opening Sling Learned XML files
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@897 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -930,7 +930,8 @@ PID=00 F8
 VariantName=1
 FixedData=03 D7 39 FF FF
 DevParms=Main Device:8=0,Default Sub Device:8=[0]
-DeviceTranslator=Translator(lsb,comp,0,8,24)
+DeviceTranslator=Translator(lsb,comp,0,8,24) Translator(lsb,comp,1,8,32)
+CmdIndex=1
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
@@ -951,7 +952,8 @@ PID=00 F8
 VariantName=2
 FixedData=03 D7 39 FF FF
 DevParms=Main Device:8=0,Default Sub Device:8=[0]
-DeviceTranslator=Translator(lsb,comp,0,8,24)
+DeviceTranslator=Translator(lsb,comp,0,8,24) Translator(lsb,comp,1,8,32)
+CmdIndex=1
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
@@ -973,7 +975,8 @@ PID=00 F8
 VariantName=3
 FixedData=03 D7 39 FF FF
 DevParms=Main Device:8=0,Default Sub Device:8=[0]
-DeviceTranslator=Translator(lsb,comp,0,8,24)
+DeviceTranslator=Translator(lsb,comp,0,8,24) Translator(lsb,comp,1,8,32)
+CmdIndex=1
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
