Fixes for Fujitsu Add (tested) or (untested) to notes for Slingbox Learned Signals
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@900 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="C:/rm/km/lib/TableLayout.jar"/>
 	<classpathentry kind="lib" path="jlfgr-1_0.jar"/>
+	<classpathentry kind="lib" path="lib/RMGraphics.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
