--- a/protocols.ini
+++ b/protocols.ini
@@ -929,11 +929,11 @@ Code.HCS08=20 10 22 47 11 05 04 08 02 75 00 CF 00 D2 02 7A 42 95 3F 56 19 60 B6 
 PID=00 F8
 VariantName=1
 FixedData=03 D7 39 FF FF
-DevParms=Main Device:8=0,Default Sub Device:8=[0]
-DeviceTranslator=Translator(lsb,comp,0,8,24) Translator(lsb,comp,1,8,32)
+DevParms=Main Device:8=0
+DeviceTranslator=Translator(lsb,comp,0,8,32)
 CmdIndex=1
 DefaultCmd=00 00
-CmdParms=OBC=0,Sub dev={1}
+CmdParms=OBC=0,Sub dev={0}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
 ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 #Code.S3C80=43 8B 52 8B 14 8F 45 08 08 00 CB 00 C4 00 CB 02 \
@@ -951,11 +951,11 @@ ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 PID=00 F8
 VariantName=2
 FixedData=03 D7 39 FF FF
-DevParms=Main Device:8=0,Default Sub Device:8=[0]
-DeviceTranslator=Translator(lsb,comp,0,8,24) Translator(lsb,comp,1,8,32)
+DevParms=Main Device:8=0
+DeviceTranslator=Translator(lsb,comp,0,8,32)
 CmdIndex=1
 DefaultCmd=00 00
-CmdParms=OBC=0,Sub dev={1}
+CmdParms=OBC=0,Sub dev={0}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
 ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 #Code.S3C80=43 8B 52 8B 16 8F 45 08 08 00 CB 00 C4 00 CB 02 \
@@ -974,11 +974,11 @@ ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 PID=00 F8
 VariantName=3
 FixedData=03 D7 39 FF FF
-DevParms=Main Device:8=0,Default Sub Device:8=[0]
-DeviceTranslator=Translator(lsb,comp,0,8,24) Translator(lsb,comp,1,8,32)
+DevParms=Main Device:8=0
+DeviceTranslator=Translator(lsb,comp,0,8,32)
 CmdIndex=1
 DefaultCmd=00 00
-CmdParms=OBC=0,Sub dev={1}
+CmdParms=OBC=0,Sub dev={0}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
 ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 \
