--- a/protocols.ini
+++ b/protocols.ini
@@ -1827,23 +1827,23 @@ Notes=Combines all Sub Device numbers for one Device number. \
 Code.S3C80=45 91 42 8b 12 8f 44 08 08 00 da 00 c6 00 da 02 7b 90 c9 06 d0 03 54 e6 0c e8 08 08 09 06 08 05 B4 06 c0 B4 07 c0 09 08 f6 01 46 f6 01 0a fb 0d 00 0c eb f4 c6 3e 00 00 b0 4a f6 01 0a af
 Code.740=0B 1C 42 80 0E E3 72 10 08 08 01 7F 02 A1 5F 02 80 03 39 A5 62 85 60 45 5F 45 61 85 62 4C 00 FF
 
-[Panasonic Combo (flawed)]
-PID=00 CD
-DevParms=Main Device=160,OEM Dev1=2,OEM Dev2=32
-DeviceTranslator=Translator(lsb,comp,0,8,16)  \
-                 Translator(lsb,comp,1,8,0)  \
-                 Translator(lsb,comp,2,8,8)
-FixedData=bf fb fa
-CmdParms=Sub Device=0,OBC=0
-CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
-DefaultCmd=ff ff
-CmdIndex=1
-Notes=Combines some Sub Device numbers for one Device number. \
-      \n\n\
-      Seriously flawed \
-      May be useful if the desired combinations happen to be among the few that \
-      work and your remote happens to have this protocol built in.  Otherwise, \
-      use Panasonic Combo, which does the same job correctly.
+#[Panasonic Combo (flawed)]
+#PID=00 CD
+#DevParms=Main Device=160,OEM Dev1=2,OEM Dev2=32
+#DeviceTranslator=Translator(lsb,comp,0,8,16)  \
+#                 Translator(lsb,comp,1,8,0)  \
+#                 Translator(lsb,comp,2,8,8)
+#FixedData=bf fb fa
+#CmdParms=Sub Device=0,OBC=0
+#CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
+#DefaultCmd=ff ff
+#CmdIndex=1
+#Notes=Combines some Sub Device numbers for one Device number. \
+#      \n\n\
+#      Seriously flawed \
+#      May be useful if the desired combinations happen to be among the few that \
+#      work and your remote happens to have this protocol built in.  Otherwise, \
+#      use Panasonic Combo, which does the same job correctly.
 
 [Panasonic2 (LCD-Hacked)]
 PID=01 09
