--- a/build.xml
+++ b/build.xml
@@ -63,7 +63,7 @@
 			<zipfileset src="${src}/par64.zip" includes="libjp1parallel.so" prefix="Linux-amd64" filemode="755"/>
             <zipfileset src="${src}/jp12serial_0.17_bin.zip" includes="**/*.dll"/>
 			<zipfileset src="${src}/jp12serial_0.17_bin.zip" includes="**/*.so" filemode="755"/>
-            <zipfileset src="${src}/jp1usb.zip" includes="jp1usb.dll" prefix="Windows"/>
+            <zipfileset src="${src}/jp1usb003.zip" includes="jp1usb.dll" prefix="Windows"/>
 			<zipfileset src="${src}/DecodeIR.zip" includes="**/*.so" filemode="755"/>
 			<zipfileset src="${src}/DecodeIR.zip" includes="**/*.dll,DecodeIR.html,DecodeIR_ChangeLog.txt"/>
             <zipfileset dir="${src}" includes="*.sh" filemode="755" />
