- Create File/Set Directory menu and implement entries to change RDF Path and Image Path (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@983 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,8 @@
 							<include name="toolbarButtonGraphics/general/Paste.gif"/>
 							<include name="toolbarButtonGraphics/general/New.gif"/>
 						</zipfileset> 
-                        <zipfileset src="${lib.dir}/RMGraphics.jar"/> 
+                        <zipfileset src="${lib.dir}/RMGraphics.jar"/>
+                		<zipfileset src="${lib.dir}/l2fprod-common-directorychooser.jar" includes="**/*.class"/>
                 </jar>
                 <java classpath="${build}" classname="com.hifiremote.jp1.RemoteMaster" outputproperty="rmversion">
                         <arg value="-version" />
