--- a/build.xml
+++ b/build.xml
@@ -45,7 +45,7 @@
                         <zipfileset src="${lib.dir}/RMGraphics.jar"/>
                 		<zipfileset src="${lib.dir}/l2fprod-common-directorychooser.jar" includes="**/*.class"/>
                 </jar>
-                <java classpath="${build}" classname="com.hifiremote.jp1.RemoteMaster" outputproperty="rmversion">
+                <java classpath="RemoteMaster.jar" classname="com.hifiremote.jp1.RemoteMaster" outputproperty="rmversion">
                         <arg value="-version" />
                         <redirector outputproperty="rmversion">
                                 <outputfilterchain>
