- Use JDirectoryChooser instead of JFileChooser in Options/Folders menu of KeyMapMaster (Graham) - Make highlighting an option, defaulting to off (Graham) - Modify build.xml to exclude the demo folder in the l2fprod import (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@986 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/build.xml
+++ b/build.xml
@@ -43,7 +43,10 @@
 							<include name="toolbarButtonGraphics/general/New.gif"/>
 						</zipfileset> 
                         <zipfileset src="${lib.dir}/RMGraphics.jar"/>
-                		<zipfileset src="${lib.dir}/l2fprod-common-directorychooser.jar" includes="**/*.class"/>
+                		<zipfileset src="${lib.dir}/l2fprod-common-directorychooser.jar">
+                			<include name="com/l2fprod/common/**/*.*"/>
+                			<exclude name="com/l2fprod/common/demo/**/*.*"/>
+                		</zipfileset>
                 </jar>
                 <java classpath="RemoteMaster.jar" classname="com.hifiremote.jp1.RemoteMaster" outputproperty="rmversion">
                         <arg value="-version" />
