- Add ExtInstall.jar as a referenced library and update build.xml to include it (Graham) - Add Install Extender item to File menu and implement it using procedures from ExtInstall.jar (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@999 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/build.xml
+++ b/build.xml
@@ -47,6 +47,7 @@
                 			<include name="com/l2fprod/common/**/*.*"/>
                 			<exclude name="com/l2fprod/common/demo/**/*.*"/>
                 		</zipfileset>
+                		<zipfileset src="${lib.dir}/ExtInstall.jar" includes="com/**/*.class"/>
                 </jar>
                 <java classpath="RemoteMaster.jar" classname="com.hifiremote.jp1.RemoteMaster" outputproperty="rmversion">
                         <arg value="-version" />
