Clean up compiler warnings
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1001 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/RMGraphics.jar"/>
 	<classpathentry kind="lib" path="lib/TableLayout.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common-directorychooser.jar"/>
+	<classpathentry kind="lib" path="lib/ExtInstall.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
