--- a/build.xml
+++ b/build.xml
@@ -68,7 +68,7 @@
 			<zipfileset src="${src}/par64.zip" includes="libjp1parallel.so" prefix="Linux-amd64" filemode="755"/>
             <zipfileset src="${src}/jp12serial018.zip" includes="**/*.dll"/>
 			<zipfileset src="${src}/jp12serial018.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
-            <zipfileset src="${src}/jp1usb003.zip" includes="jp1usb.dll" prefix="Windows"/>
+            <zipfileset src="${src}/jp1usb_dll_031.zip" includes="jp1usb.dll" prefix="Windows"/>
 			<zipfileset src="${src}/DecodeIR241v2.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
 			<zipfileset src="${src}/DecodeIR241v2.zip" includes="**/*.dll,DecodeIR.html,DecodeIR_ChangeLog.txt,Mac OS X README.txt"/>
             <zipfileset dir="${src}" includes="*.sh" filemode="755" />
