Add "Allow Preserve Control" to Options menu, that shows/hide the drop-down that controls whether OBC or EFC/Hex are preserved when changing protocols (Greg)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1072 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/build.xml
+++ b/build.xml
@@ -69,9 +69,8 @@
             <zipfileset src="${src}/jp12serial018.zip" includes="**/*.dll"/>
 			<zipfileset src="${src}/jp12serial018.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
             <zipfileset src="${src}/jp1usb_dll_031.zip" includes="jp1usb.dll" prefix="Windows"/>
-			<zipfileset src="${src}/DecodeIR_243.zip" includes="**/*.so" filemode="755"/>
-			<zipfileset src="${src}/DecodeIR_243.zip" includes="Mac/**/*.jnilib" filemode="755" prefix="" />
-			<zipfileset src="${src}/DecodeIR_243.zip" includes="**/*.dll,DecodeIR.html,Docs/*.txt"/>
+			<zipfileset src="${src}/DecodeIR_243.zip" includes="**/libDecodeIR.so,**/libDecodeIR.jnilib" filemode="755"/>
+			<zipfileset src="${src}/DecodeIR_243.zip" includes="**/DecodeIR.dll,DecodeIR.html,Docs/*.txt"/>
             <zipfileset dir="${src}" includes="*.sh" filemode="755" />
           	<zipfileset dir="${src}" includes="tutorial.htm" />
             <zipfileset dir="tutorial_files" includes="**/*" prefix="tutorial_files" />
