Add support for 64-bit Java on 64-bit Windows.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1141 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/build.xml
+++ b/build.xml
@@ -62,12 +62,12 @@
           <zip destfile="${src}/RemoteMaster.${rmversion}.zip">
             <zipfileset dir="${src}" includes="RemoteMaster.jar,Readme.html,*.css,protocols.ini,ChangeLog.txt,digitmaps.bin,Setup.vbs,porttalk.sys,*.ico" />
             <zipfileset src="${src}/jp1parallel.zip" includes="porttalk.sys"/>
-            <zipfileset src="${src}/jp1parallel.zip" includes="jp1parallel.dll" prefix="Windows"/>
+            <zipfileset src="${src}/jp1parallel.zip" includes="jp1parallel.dll" prefix="Windows-x86"/>
 			<zipfileset src="${src}/jp1parallel.zip" includes="libjp1parallel.so" prefix="Linux-i386" filemode="755"/>
 			<zipfileset src="${src}/par64.zip" includes="libjp1parallel.so" prefix="Linux-amd64" filemode="755"/>
             <zipfileset src="${src}/jp12serial019.zip" includes="**/*.dll"/>
 			<zipfileset src="${src}/jp12serial019.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
-            <zipfileset src="${src}/jp1usb_dll_031.zip" includes="jp1usb.dll" prefix="Windows"/>
+            <zipfileset src="${src}/jp1usb_dll_031.zip" includes="jp1usb.dll" prefix="Windows-x86"/>
 			<zipfileset src="${src}/DecodeIR_244.zip" includes="**/libDecodeIR.so,**/libDecodeIR.jnilib" filemode="755"/>
 			<zipfileset src="${src}/DecodeIR_244.zip" includes="**/DecodeIR.dll,DecodeIR.html,Docs/*.txt" filemode="555"/>
             <zipfileset dir="${src}" includes="*.sh" filemode="755" />
