--- a/build.xml
+++ b/build.xml
@@ -47,6 +47,10 @@
                 			<exclude name="com/l2fprod/common/demo/**/*.*"/>
                 		</zipfileset>
                 		<zipfileset src="${lib.dir}/ExtInstall.jar" includes="com/**/*.class"/>
+						<zipfileset src="${lib.dir}/hidapi-1.1.jar" includes="**/*.class"/>
+                		<zipfileset src="${lib.dir}/hidapi-1.1.jar">
+                			<include name="native/**/*.*"/>
+                		</zipfileset>		
                 </jar>
                 <java classpath="RemoteMaster.jar" classname="com.hifiremote.jp1.RemoteMaster" outputproperty="rmversion">
                         <arg value="-version" />
