- Final tweaks for v2.03 Alpha 21 (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1196 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1108,11 +1108,18 @@ Code.MAXQ610=33 69 01 0E 13 00 AB 00 13 00 55 00 D6 0E 56 01 AB 00 00 80 5C 10 D
 
 [GXB]
 PID=01 DF
+VariantName=JP1
 CmdParms=Device:4,OBC:8
 CmdTranslator=Translator(0,4) Translator(1,8,4) XorCheck(1,12,1,8)
 DefaultCmd=00 00
 Code.S3C80= 3D 90 02 8B 15 88 25 08 08 03 0C 00 F0 01 04 02 \
             F8 0D AC 01 04 00 F0 FF FF 05 8D 01 46
+
+[X10] 
+PID=01 DF 
+CmdParms=OBC:8 
+CmdTranslator=Translator() 
+DefaultCmd=00
 
 [Hamlin]
 PID=00 29
@@ -4266,6 +4273,7 @@ Code.HCS08=20 11 21 43 41 84 01 00 02 02 ED 01 88 01 76 01 82 00 00 6E 08 B2 B6 
 
 [pid: 00 98]
 PID=00 98
+VariantName=2
 Code.S3C80=43 8B 12 8B 19 C5 C9 80 20 08 08 01 07 00 F4 01 07 03 03 73 50 10 7C 08 2A 00 00 00 5A 95 76 05 80 6B 03 B6 03 04 8D 01 46
 Code.6805-RC16/18=11 24 12 20 12 C5 48 08 08 00 83 84 01 83 8C 39 26 00 84 3D 1F 2D 55 0F 5C 06 B6 5A A8 04 B7 5A CD 01 AF B6_75 BE_76 B7_6F BF_70 10_7C CC 01 AF
 
@@ -4783,11 +4791,6 @@ Code.HCS08=20 16 22 47 21 B6 45 08 08 00 9C 01 92 00 9C 00 93 17 91 05 D8 02 EB 
 PID=01 97
 Code.HCS08=20 16 22 47 21 86 04 04 02 02 E8 00 D4 01 05 02 B1 09 7C 01 05 00 D4 08 B6 61 4E 62 56 AE 08 39 56 24 02 A8 80 5B F8 4E 62 61 B7 62 CD FF 5F CD FF 5F 45 EB B2 CD FF 74 CD FF 92 25 EF 81
 
-[pid: 01 9B]
-PID=01 9B
-Code.HCS08=20 19 22 47 11 85 45 08 08 00 F6 04 E2 00 F6 02 EE 2C EF 05 DB 05 E8 00 F6 07 DC 45 00 04 E6 79 E7 99 5B FA 16 AB 6E 11 7D CC FF 5F
-Code.MAXQ610=33 69 11 14 13 00 5F 00 13 00 39 00 6A 03 72 00 73 00 00 00 13 00 99 00 00 00 43 5C 02 40 70 71
-
 [Amino (Official)]
 PID=01 9C
 DevParms=Device:4=0, SubDevice:8=0, Freq=1:37KHz|55KHz
@@ -5172,3 +5175,15 @@ Code.S3C80=2C 5F 31 8B 17 87 94 10 08 08 00 A5 00 91 00 A5 00 91 99 84 01 4A 00 
 	       09 E6 0E 46 E6 0F 94 F6 01 55 56 04 7F E4 05 C2 E4 C2 C3 E4 06 05 04 06 C3 F0 06 04 06 C3 56 C3 \
 	       0F 56 C2 F0 44 C2 C3 E4 C3 06 F6 FF 58 F6 01 0A 7B F8 46 04 80 B6 06 08 E6 C1 22 F6 01 4C F6 01 \
 	       46 AF
+
+[Konka]
+PID=01 9B
+DevParms=Device:8
+DeviceTranslator=Translator()
+CmdParms=OBC:8
+CmdTranslator=Translator()
+FixedData=00
+DefaultCmd=00
+Code.MAXQ610=33 69 11 14 13 00 5f 00 13 00 39 00 6a 03 72 00 73 00 00 00 13 00 99 00 00 00 43 5c 02 40 70 71
+Code.S3C80=43 8B 11 8B 16 85 45 08 08 00 FA 04 CE 00 FA 02 DA 2C DB 05 DC 05 D4 00 FA 07 C8 0C 22 1C D0 2C 04 F6 01 5B 77 77 E6 25 11 8D 01 46
+Code.HCS08=20 19 22 47 11 85 45 08 08 00 F6 04 E2 00 F6 02 EE 2C EF 05 DB 05 E8 00 F6 07 DC 45 00 04 E6 79 E7 99 5B FA 16 AB 6E 11 7D CC FF 5F
