- Fixed bug with Buttons tab of RM for upgrades for an XSight remote (Graham) - Improve handling of XSight Touch system.xcf file (Graham) - Added Lutron Official to protocols.ini and revised LutronTranslator.java accordingly (Dave Reed) - Version now v2.03 Alpha 22 Test 9 (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1217 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1465,6 +1465,40 @@ For GRX A6 - use device code 13\n\
 For GRX A7 - use device code 14\n\
 For GRX A8 - use device code 15
 
+[Lutron Official]
+PID=00 E7
+FixedData=88 BD 82 BE
+FixedDataMask=FF FF FF 00
+DevParms=Device:8=255, OBCgrpA:4=4, OBCgrpB:4=9, OBCgrpC:4=5
+DeviceTranslator=LutronTranslator(2)
+DefaultCmd=11 00
+CmdParms=OBC:8=0, Bit 1:OBC|Toggle|Both
+CmdTranslator=LutronTranslator(3) Translator(1,2,8)
+Notes=This executor can send any device.  For a given device, only OBCs from 3 groups of the 16 listed below can be used.\n\
+This is less restrictive than it might seem, since most Lutron OBCs are in groups 4 and 9.\n\
+The executor can provide a toggle behavior in which alternate button presses cause the state of bit 1 of the OBC to be flipped.\n\
+For example, UEI setup code 0597 sends OBC = 145 with 147 sent on the next button press to simulate a Power toggle.\n\  
+The executor can also send this type of OBC pair with a single button press.\n\
+OBC Groups:\n\
+0    0-15  ( 0-0F)\n\
+1   16-31  (10-1F)\n\
+2   32-47  (20-2F)\n\
+3   48-63  (30-3F)\n\
+4   64-79  (40-4F)\n\
+5   80-95  (50-5F)\n\
+6   96-111 (60-6F)\n\
+7  112-127 (70-7F)\n\
+8  128-143 (80-8F)\n\
+9  144-159 (90-9F)\n\
+10 160-175 (A0-AF)\n\
+11 176-191 (B0-BF)\n\
+12 192-207 (C0-CF)\n\
+13 208-223 (D0-DF)\n\
+14 224-239 (E0-EF)\n\
+15 240-255 (F0-FF) 
+Code.S3C80= 3F 84 42 8B 13 86 04 08 08 04 78 00 00 00 00 04 66 11 CB 23 C0 00 00 08 68 08 37 63 05 37 61 07 8B 08 E4 06 04 8B 03 E4 05 04 37 6F 0D 37 6C 13 76 00 01 6B 14 B6 07 36 8B 0F F6 FF 4F B6 07 36 8D E1 D3 F6 FF 57 7B FB AF F6 FF 4F 7B FB AF 6C 03 F6 FF 57 6A FB AF 76 03 80 6B 02 77 71 F6 01 46 F6 01 0A AF
+Code.MAXQ610=30 64 42 0e 5c 00 00 00 00 00 5c 00 6e 01 dc 02 00 00 02 52 c0 81 15 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 42 50 03 70 77 74 86 1b 00 00 00 44 36 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 43 50 03 02 70 77 74 81 25 0c 00 d6 d5 00 16 d6 d6 03 53 d7 d1 d6 43 40 23 02 70 77 74 c6 40 03 02 00 00 80 70 77 74 04 17 d4 d4 36 00 02 00 01 00
+
 [MCE]
 PID=01 2a
 DevParms=Device:7=4,OEM2:8=15
