--- a/protocols.ini
+++ b/protocols.ini
@@ -102,6 +102,7 @@
 
 [Acer Keyboard]
 PID=01 11
+VariantName=JP1
 DevParms=Device:4=15,Sub Device:3=3
 DeviceTranslator=Translator(lsb,0,3,4) Translator(lsb,0,1,8,3) Translator(lsb,1,3,9)
 FixedData=8E EC
