- Insert missing "DevParms=" in protocols.ini entry for [NECx2] (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1287 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1780,7 +1780,7 @@ Code.MAXQ610=33 69 31 14 16 00 15 00 16 00 3F 00 05 10 56 01 AB 00 05 10 AB 00 A
 PID=00 5A
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
-Device:8=0,Sub Device:8=0
+DevParms=Device:8=0,Sub Device:8=0
 DeviceTranslator=NEC005ATranslator(31)
 FixedData=31 ff ff
 Notes=NEC2 signals repeat by repetitively sending a 32 bit frame.  By contrast, NECx1 sends a single frame of 32 bits, \
