--- a/protocols.ini
+++ b/protocols.ini
@@ -313,7 +313,7 @@ Code.HCS08=20 11 1F 4A 11 C5 41 02 08 00 8A 01 80 00 8A 03 8F 31 6A CC FF 5F
 
 [Amino (Official)]
 PID=01 9C
-DevParms=Device:4=0, SubDevice:8=0, Freq=1:37KHz|55KHz
+DevParms=Device:4=0, SubDevice:8=0, Freq:37KHz|55KHz=1
 DeviceTranslator=Translator(0,4,0) Translator(1,8,8) Translator(2,1,19) 
 FixedData=0D 00 F0
 CmdParms=OBC:8=0
@@ -324,7 +324,7 @@ Notes=Amino factory has specified that the Subdevice is always zero.
 [Amino]
 PID=01 9C
 VariantName=JP1
-DevParms=Device:4=0, Freq=1:36KHz|56KHz
+DevParms=Device:4=0, Freq:36KHz|56KHz=1
 DeviceTranslator=Translator(0,4) NibbleSumChk(8000,12,12) Translator(1,1,18) 
 FixedData=0D 00 20
 CmdParms=OBC:8=0
@@ -453,12 +453,13 @@ DevParms=Device Code:3=0,Freq=0:30.3KHz|36.5KHz, Duration After Prefix=0:Normal|
 DeviceTranslator=Translator(lsb,0,3,0) Translator(1,1,6) Translator(2,1,7)
 FixedData=00
 DefaultCmd=80
-Notes=DecodeIR (as of 2.44 and earlier) incorrectly decodes Blaupunkt with 2 bits for the Device number, and 7 bits for the OBC.  Actually it should be 3bits for Device and 6 bits for OBC.  To enter decodes here, if the decoded OBCs are greater than 63, add 4 to the decoded Device number.
+Notes=DecodeIR (as of 2.44 and earlier) incorrectly decodes Blaupunkt with 2 bits for the Device number, and 7 bits for the OBC.  The correct partioning is 3 bits of Device and 6 bits of OBC.  To enter decodes here, if the decoded OBCs are greater than 63, enter newDev = 2*decodedDev+1; newOBC = decodedOBC-64.  If decodedOBC < 64, newDev = 2*decodedDev.
 Code.S3C80=55 B0 11 8B 19 B5 84 10 03 07 01 08 00 F7 01 08 00 F7 27 33 01 08 05 16 EE 34 25 6C E1 82 E4 03 05 E4 04 06 68 03 37 62 0F E6 0E 47 E6 0F 94 F6 01 55 C4 24 1C C4 26 22 37 60 03 C4 22 1C F6 FF 52 E4 05 03 E4 06 04 C4 22 1C F6 01 46 F6 01 0A 7B F8 E6 03 FF E6 04 FF 8D 01 46
 Code.740=11 21 11 80 11 A8 90 20 10 03 07 01 91 01 97 9B C0 10 04 57 00 03 20 5E 01 A2 D9 A0 18 22 44 C6 69 3C 00 5C A9 D2 85 7F 22 00 3F 7F 3C FF 5F E6 69 2F 5C 4C 00 FF
 Code.6805-C9=11 22 11 20 11 A8 90 20 10 03 07 01 9C 01 94 9B 9D 10 04 57 00 03 AD 12 A6 19 AE 30 CD 01 9F 3A 66 3F 59 A6 D2 B7 7C CD 01 83 13 7C A6 FF B7 5C 3C 66 12 59 CC 01 83
 Code.6805-RC16/18=15 2C 11 20 17 B5 85 90 38 03 07 00 7F 83 00 82 80 13 A3 00 02 7C 83 00 00 00 77 24 A6 FF B7 5C B7 5D 01 5A 08 B6_78 B7_6F B6_79 B7_70 CC 01 AF
 Code.HCS08=20 1C 2B 5A 11 B5 84 10 03 07 01 07 01 0B 01 07 01 0B 27 47 01 07 05 2B EE 48 25 80 E1 96 55 60 35 62 03 60 10 45 24 4C 35 A7 CD FF 6E 55 7C 35 74 55 7E 35 7A 01 60 04 55 7A 35 74 AD 10 55 62 35 60 55 7A 35 74 CD FF 5F CD FF 92 25 F8 A6 FF B7 60 B7 61 CC FF 5F
+Code.MAXQ610=40 85 11 a8 00 04 10 00 10 00 00 00 10 00 10 00 00 00 5e 02 10 00 50 00 5e 0e 13 00 14 00 00 00 14 00 13 00 00 00 b6 02 13 00 60 00 4f 10 00 80 24 30 d2 ff ff 55 10 d0 02 56 1c d0 01 52 3c 42 02 57 14 00 00 55 10 d0 01 54 35 6f 00 30 04 35 6f 52 30 44 14 42 40 22 62 23 42 52 22 61 20 42 42 02 62 23
 
 [Boston Accoustics]
 PID=00 46
@@ -1582,6 +1583,7 @@ The RC6 toggle bit is always zero in MCE signals.
 
 [Metz19]
 PID=01 34
+VariantName=JP1
 DevParms=Device:3=1
 DeviceTranslator=Translator(0,3,1) Translator(comp,0,3,4)
 FixedData=00 00
@@ -1794,7 +1796,7 @@ Code.HCS08=20 15 22 47 31 CF 44 08 08 01 17 01 1A 01 17 03 4D D2 F0 11 93 08 CA 
 Code.MAXQ610=33 69 31 14 16 00 15 00 16 00 3F 00 05 10 56 01 AB 00 05 10 AB 00 AB 00 00 80 28 56 20 D0 04 5C 1C 50 00 55 0C D0 20 00 D1 D2 00 57 14 00 00 17 D1 D1 80 17 D2 D2 80 57 0C 00 00 55 08 D0 20 17 D2 D1 FF E2 44 24 71 72 73 F3 24 56 08 D0 08 5B 18 52 00 56 08 D0 02 10 B8 00 01 56 08 D0 10 15 95 95 01 56 0C D0 01 15 95 95 10 16 96 96 1F E2 55 01 81 0C 55 0C D0 10 10 95 00 D4 10 B7 00 00
 
 [NEC1-f16 Official]
-PID=01AD
+PID=01 AD
 CmdParms=Dev:8=210, Sub:8=30, OBC1:8=0, OBC2:8=0
 CmdTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24)
 DefaultCmd=00 00 00 00
@@ -1936,6 +1938,7 @@ Code.HCS08=20 17 24 4B 21 87 C5 80 04 08 08 00 4E 00 8E 00 00 00 53 B2 AD 00 CF 
 
 [Nokia32]
 PID=01 73
+Variant=1
 DevParms=Device,Sub Device,X,High X-bit:Constant|Toggle|Release
 DeviceTranslator=Translator(3,8,0) Translator(0,8,8) Translator(1,8,16) Translator(2,8,24)
 FixedData=00 00 00 00
@@ -3280,6 +3283,7 @@ Code.S3C80=2C 5C 22 8B 12 95 45 04 08 00 FA 01 E0 00 FA 03 D4 0F 8C 07 D0 07 BC 
 
 [RCA Combo (w/Duration)]
 PID=01 43
+VariantName=JP1
 CmdParms=Device=0:4,OBC=0
 CmdTranslator=Translator(0,4,0) Translator(1,8,8)
 Notes=S3C8 hacked combo
@@ -3291,13 +3295,14 @@ CodeTranslator.S3C80=Translator(0,7,233)
 
 [RCA-38]
 PID=01 AF
+VariantName=JP1
 CmdTranslator=Translator()
 CmdParms=OBC=0
 Notes=
 DevParms=Device Code:4
 FixedData=0f
 DeviceTranslator=Translator(0,4)
-Notes=This is a newly discovered 38kHz version of the standard RCA protocol.
+Notes=This is a 38kHz version of the standard RCA protocol.
 Code.S3C80=3C 8F 11 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 E0 0F 8C 07 D0 07 BC 8D 01 46
 Code.740=0B 18 11 80 0E F4 72 1D 04 08 03 85 02 38 08 97 E4 06 2B 4C 00 FF
 Code.6805-C9=0B 19 11 20 0F F4 F0 00 1C 04 08 02 26 03 82 08 9B E2 06 06 33 5A 33 5B CD 01 83 CD 01 8C 24 F8 81
@@ -3899,6 +3904,7 @@ Code.HCS08=20 17 02 02 31 F5 15 05 07 02 57 01 2C 01 2B 01 2C 59 7D 04 B2 01 2C 
 
 [StreamZap]
 OldNames=Streamzap
+VariantName=JP1
 PID=01 23
 DevParms=Device Code:7=1
 DeviceTranslator=Translator(comp,0,7,0)
@@ -3932,6 +3938,7 @@ Code.HCS08=20 16 17 30 11 85 85 10 08 06 01 A6 01 A6 01 A6 01 A6 A3 34 01 A6 00 
 
 [TDC]
 PID=01 EE
+VariantName=JP1
 DevParms=Variant:TDC-38|TDC-56,Device:5=10,Sub Device:5=26
 DeviceTranslator=Translator(0,1,7) Translator(1,5,1) Translator(2,5,8)
 CmdParms=OBC:7=0
@@ -4381,6 +4388,13 @@ Code.HCS08=20 1C 26 59 11 84 85 90 38 00 07 00 FA 00 FF 00 FA 00 FF 2B D9 00 FA 
 
 [pid: 00 13]
 PID=00 13
+DevParms=Allow Repeat Group repeats:bool=1
+DeviceTranslator=Translator(0,1,7,)            
+FixedData=01
+CmdParms=OBC:6
+CmdTranslator=Translator(lsb,0,6,2) 
+DefaultCmd=BF
+Notes=Sends only one frame without repeats, except optionally repeats for Repeating Group Buttons (e.g. Vol+/-, Rewind, FFWD)
 Code.S3C80=3D 92 11 8B 14 84 10 00 08 02 26 00 00 00 00 02 14 34 A8 00 00 00 00 00 02 76 03 01 6B 03 46 29 02 8D 01 46
 Code.740=0B 1A 11 80 0C A0 C0 10 2A 00 08 01 01 02 52 20 F8 22 00 A2 DC A0 01 22 44 17 5D 06 22 09 B0 02 2F 7F 4C 00 FF
 Code.6805-C9=0B 1B 11 20 0C A0 C0 10 2B 00 08 02 35 01 F7 22 1A CD 01 83 A6 DD 4A 26 FD CD 01 83 01 5A 0A CD 01 86 25 05 12 7C CD 01 83 81
