Revises Kaseikyo, SharpDVD, and Blaupunkt entries
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1300 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -453,7 +453,7 @@ DevParms=Device Code:3=0,Freq=0:30.3KHz|36.5KHz, Duration After Prefix=0:Normal|
 DeviceTranslator=Translator(lsb,0,3,0) Translator(1,1,6) Translator(2,1,7)
 FixedData=00
 DefaultCmd=80
-Notes=DecodeIR (as of 2.44 and earlier) incorrectly decodes Blaupunkt with 2 bits for the Device number, and 7 bits for the OBC.  The correct partioning is 3 bits of Device and 6 bits of OBC.  To enter decodes here, if the decoded OBCs are greater than 63, enter newDev = 2*decodedDev+1; newOBC = decodedOBC-64.  If decodedOBC < 64, newDev = 2*decodedDev.
+Notes=DecodeIR (for version 2.44 and earlier) incorrectly decoded Blaupunkt with 2 bits for the Device number, and 7 bits for the OBC.  The correct partioning is 3 bits of Device and 6 bits of OBC. DecodeIR version 2.45 decodes this way.  If your decodes are from 2.45, simply enter the decoded device number and OBC.  To enter decodes from 2.44 and earlier, if the decoded OBCs are greater than 63, enter newDev = 2*decodedDev+1; newOBC = decodedOBC-64.  If decodedOBC < 64, newDev = 2*decodedDev.
 Code.S3C80=55 B0 11 8B 19 B5 84 10 03 07 01 08 00 F7 01 08 00 F7 27 33 01 08 05 16 EE 34 25 6C E1 82 E4 03 05 E4 04 06 68 03 37 62 0F E6 0E 47 E6 0F 94 F6 01 55 C4 24 1C C4 26 22 37 60 03 C4 22 1C F6 FF 52 E4 05 03 E4 06 04 C4 22 1C F6 01 46 F6 01 0A 7B F8 E6 03 FF E6 04 FF 8D 01 46
 Code.740=11 21 11 80 11 A8 90 20 10 03 07 01 91 01 97 9B C0 10 04 57 00 03 20 5E 01 A2 D9 A0 18 22 44 C6 69 3C 00 5C A9 D2 85 7F 22 00 3F 7F 3C FF 5F E6 69 2F 5C 4C 00 FF
 Code.6805-C9=11 22 11 20 11 A8 90 20 10 03 07 01 9C 01 94 9B 9D 10 04 57 00 03 AD 12 A6 19 AE 30 CD 01 9F 3A 66 3F 59 A6 D2 B7 7C CD 01 83 13 7C A6 FF B7 5C 3C 66 12 59 CC 01 83
@@ -1370,63 +1370,54 @@ Code.HCS08=20 15 22 47 11 E5 44 04 08 01 0F 01 09 01 0F 03 39 D6 66 11 A0 08 B7 
 #F1 F2    F3     F4    F5  | Cmd1  Cmd2
 [Kaseikyo]
 PID=00 F8
-DevParms=OEM1=170,OEM2=90,Device:4=8,Sub Device=18,E=1,Leadout(mS):20|33|70=0
-DeviceTranslator=Translator(5,8,0)  \
-		     Translator(lsb,comp,0,8,8)  \
-                 Translator(lsb,comp,1,8,16) \
-		                  XorCheck(4,24,15,4)      \
-		     Translator(lsb,comp,2,4,28) \
+DevParms=OEM1=84,OEM2=87,Device:4=5,Sub Device=88,Leadout(mS):20|33 only 40 bits!|70|44=3
+DeviceTranslator=Translator(4,8,0)  \
+                 Translator(lsb,comp,0,8,8)   \
+                 Translator(lsb,comp,1,8,16)  \
+		                  XorCheck(4,24,15,4) \
+                 Translator(lsb,comp,2,4,28)  \
                  Translator(lsb,comp,3,8,32)                      
-FixedData=03 AA A5 FF FF
-CmdParms=OBC=0 
+FixedData=03 D5 15 35 E5
+CmdParms=OBC=0, G=0
 DefaultCmd=00 00
-CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
-Notes=This is our current best guess at the "standard" version of Kaseikyo, \
-      which isn't very standard because we've only ever seen it in Sharp \
-      brand devices, while there is a common "nonstandard" Kaseikyo, which \
-      we support as Panasonic and as JVC-48, plus another "nonstandard" \
-      version of Kaseikyo which we decode as Fujitsu. \
-      Most remotes which have Variant 1 of PID 00 FB only offer choices of 20 and 33mS for leadout time.
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8)
+Notes=Use this for a decode of Kaseikyo-M.N  For example, for a decode of Kaseikyo-84.87, device 5.88, OBC=31, G=71, enter 84 as OEM1, 87 as OEM2, \
+5 as Device, 88 as SubDevice, 31 as OBC, and 71 as G \
+Most remotes which this variant of PID 00 FB only offer choices of 20 and 33mS for leadout time. 33mS sends only 40 bits, omitting G from the transmission.
 
 [Kaseikyo]
 PID=00 F8
 VariantName=2
-DevParms=OEM1=170,OEM2=90,Device:4=8,Sub Device=18,E=1,Leadout(mS):20|33|70|44=3
-DeviceTranslator=Translator(5,8,0)  \
-		     Translator(lsb,comp,0,8,8)  \
-                 Translator(lsb,comp,1,8,16) \
-		                  XorCheck(4,24,15,4)      \
-		     Translator(lsb,comp,2,4,28) \
+DevParms=OEM1=84,OEM2=87,Device:4=5,Sub Device=88,Leadout(mS):20|33 only 40 bits!|70|44=3
+DeviceTranslator=Translator(4,8,0)  \
+                 Translator(lsb,comp,0,8,8)   \
+                 Translator(lsb,comp,1,8,16)  \
+		                  XorCheck(4,24,15,4) \
+                 Translator(lsb,comp,2,4,28)  \
                  Translator(lsb,comp,3,8,32)                      
-FixedData=03 AA A5 FF FF
-CmdParms=OBC=0 
+FixedData=03 D5 15 35 E5
+CmdParms=OBC=0, G=0
 DefaultCmd=00 00
-CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
-Notes=This is our current best guess at the "standard" version of Kaseikyo, \
-      which isn't very standard because we've only ever seen it in Sharp \
-      brand devices, while there is a common "nonstandard" Kaseikyo, which \
-      we support as Panasonic and as JVC-48, plus another "nonstandard" \
-      version of Kaseikyo which we decode as Fujitsu. 
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8)
+Notes=Use this for a decode of Kaseikyo-M.N  For example, for a decode of Kaseikyo-84.87, device 5.88, OBC=31, G=71, enter 84 as OEM1, 87 as OEM2, \
+5 as Device, 88 as SubDevice, 31 as OBC, and 71 as G.  4 Lead-out times are available, but 33mS sends only 40 bits, omitting G from the transmission.  
 
 [Kaseikyo]
 PID=00 F8
 VariantName=3
-DevParms=OEM1=170,OEM2=90,Device:4=8,Sub Device=18,E=1,Leadout(mS):20|33|70|44=3
-DeviceTranslator=Translator(5,8,0)  \
-		     Translator(lsb,comp,0,8,8)  \
-                 Translator(lsb,comp,1,8,16) \
-		                  XorCheck(4,24,15,4)      \
-		     Translator(lsb,comp,2,4,28) \
+DevParms=OEM1=84,OEM2=87,Device:4=5,Sub Device=88,Leadout(mS):20|33 only 40 bits!|70|44=3
+DeviceTranslator=Translator(4,8,0)  \
+                 Translator(lsb,comp,0,8,8)   \
+                 Translator(lsb,comp,1,8,16)  \
+		                  XorCheck(4,24,15,4) \
+                 Translator(lsb,comp,2,4,28)  \
                  Translator(lsb,comp,3,8,32)                      
-FixedData=03 AA A5 FF FF
-CmdParms=OBC=0 
+FixedData=03 D5 15 35 E5
+CmdParms=OBC=0,G=0
 DefaultCmd=00 00
-CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
-Notes=This is our current best guess at the "standard" version of Kaseikyo, \
-      which isn't very standard because we've only ever seen it in Sharp \
-      brand devices, while there is a common "nonstandard" Kaseikyo, which \
-      we support as Panasonic and as JVC-48, plus another "nonstandard" \
-      version of Kaseikyo which we decode as Fujitsu. 
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8)
+Notes=Use this for a decode of Kaseikyo-M.N  For example, for a decode of Kaseikyo-84.87, device 5.88, OBC=31, G=71, enter 84 as OEM1, 87 as OEM2, \
+5 as Device, 88 as SubDevice, 31 as OBC, and 71 as G.  4 Lead-out times are available, but 33mS sends only 40 bits, omitting G from the transmission.
 Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 7D 27 70 06 D1 03 40 40 F8 92 68 55 26 20 01 08 03 37 03 0B 37 00 13 56 28 F7 C4 22 1C 8B 0B 37 00 05 C4 26 1C 8B 03 C4 24 1C 8D 01 46
 Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 CC 01 B2
 Code.HCS08=20 1B 23 4A 52 8F 45 08 08 00 D5 00 DE 00 D5 02 95 27 84 06 D0 03 54 41 0C 92 7C 55 3A 3C AC B6 60 A4 03 27 0F A1 01 26 02 17 A2 4A 48 8C 97 9E CE 7A 35 74 CC FF 5C
@@ -3688,13 +3679,13 @@ CmdIndex=1
 
 [Sharp DVD]
 PID=00 F8
-DevParms=Main Device,Sub Device
-DeviceTranslator=Translator(lsb,comp,0,8,24) Translator(lsb,comp,1,8,32)
+DevParms=Main Device:4,Sub Device
+DeviceTranslator=Translator(lsb,comp,0,8,24,4) Translator(lsb,comp,1,8,32)
 FixedData=00 aa a5 ff ff
 DefaultCmd=00 00
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
-Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90.  The only legal device numbers are 15, 31, 47, 63....16*n+15, n=0 to 15
+Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90.  
 #Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 7D 27 70 06 D1 03 40 40 F8 92 68 55 26 20 01 08 03 37 03 0E 37 00 1C 56 28 F7 E4 22 1C E4 23 1D 8B 11 37 00 08 E4 26 1C E4 27 1D 8B 06 E4 24 1C E4 25 1D 8D 01 46
 Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 80 03 2B 00 08 07 5D 06 E6 5B E6 69 80 0A E6 5B A9 5F 85 71 A9 68 85 72 4C 00 FF
 #Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 CC 01 B2
@@ -3703,13 +3694,13 @@ Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 80 03 2B 00 08 07 5D 06
 [Sharp DVD]
 PID=00 F8
 VariantName=2
-DevParms=Main Device:8=143,Sub Device:8=48
-DeviceTranslator=Translator(lsb,comp,0,4,28,4) Translator(lsb,comp,0,8,24)
+DevParms=Main Device:4=8,Sub Device:8=48
+DeviceTranslator=Translator(lsb,comp,0,4,28,4) Translator(lsb,comp,1,8,32)
 FixedData=03 AA A5 0F FF
 DefaultCmd=00 00
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
-Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90.  The only legal device numbers are 15, 31, 47, 63....16*n+15, n=0 to 15
+Notes=The SharpDVD protocol is equivalent to Kaseikyo with OEM1=170 and OEM2=90.  
 #Code.S3C80=43 8B 52 8B 16 8F 45 08 08 00 CB 00 C4 00 CB 02 6A 27 70 06 8F 03 3D 40 F8 8C 8C 20 01 76 03 01 6B 09 E4 22 1C E4 23 1D 56 28 F7 76 03 02 6B 22 E4 24 1C E4 25 1D E6 29 44 E6 0C E8 F6 01 46 F6 01 0A FB 0D 00 0C EB F4 C6 3E 00 00 B0 4A F6 01 0A AF 8D 01 46
 
 [Sharp DVD]
