- Add further keyboard or mouse alternatives for certain actions (Graham) - Add support for segment type 0x0F (Graham) - Add confirmation request when installing an extender over an apparently different one for same remote (Graham) - Update to build 11 (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1314 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1713,7 +1713,7 @@ CmdParms=OBC=0
 DevParms=Device:8=0,Sub Device:8=0,specialRecordkey=0: None|AltDev|XOR, NEC2 for repeat group=0:bool, send 2X then dittos=0:bool   
 DeviceTranslator=NEC005ATranslator(0)
 FixedData=00 ff ff
-FixedDataMask=FF FF 00
+FixedDataMask=3F FF 00
 Notes=NEC1 is the most frequently encountered IR protocol. It sends a single frame of 32 bits, followed by "dittos" if the signal is to be repeated, \
 typically because the remote button is held down.  By contrast, NEC2 signals repeat by repetitively sending  \
 the 32 bit frame. Even if you use the wrong version, it will probably still work, except for the repeat behavior. NEC1 can be specified by a \
@@ -1738,7 +1738,7 @@ CmdParms=OBC=0
 DevParms=Device:8=0,Sub Device:8=0,special Record key=0: None|AltDev|XOR=0
 DeviceTranslator=NEC005ATranslator(1)
 FixedData=01 ff ff
-FixedDataMask=FF FF 00
+FixedDataMask=3F FF 00
 Notes=NEC2 is a frequently encountered IR protocol. NEC2 signals repeat by repetitively sending a 32 bit frame.  By contrast, NEC1 sends a single frame of 32 bits, \
 followed by "dittos" if the signal is to be repeated. Even if you use the wrong version, it will probably still work, except for the repeat behavior. NEC2 can be specified by a \
 single device number or by a device.subdevice pair.  By convention, if the subdevice is not specified it is automatically sent as (255 - device). An equivalent statement is an unspecified subdevice is sent as the binary complement of the device. \n\n\
@@ -1759,6 +1759,7 @@ CmdParms=OBC=0
 DevParms=Device:8=0,Sub Device:8=0
 DeviceTranslator=NEC005ATranslator(30)
 FixedData=30 ff ff
+FixedDataMask=3F FF FF
 Notes=NECx1 sends a single frame of 32 bits, followed by "dittos" if the signal is to be repeated, \
 typically because the remote button is held down.  By contrast, NECx2 signals repeat by repetitively sending  \
 the 32 bit frame. Even if you use the wrong version, it will probably still work, except for the repeat behavior.  \
@@ -1777,6 +1778,7 @@ CmdParms=OBC=0
 DevParms=Device:8=0,Sub Device:8=0
 DeviceTranslator=NEC005ATranslator(31)
 FixedData=31 ff ff
+FixedDataMask=3F FF FF
 Notes=NEC2 signals repeat by repetitively sending a 32 bit frame.  By contrast, NECx1 sends a single frame of 32 bits, \
 followed by "dittos" if the signal is to be repeated. Even if you use the wrong version, it will probably still work, except for the repeat behavior. \
 By convention all NECx2 signals should be specified as a device.subdevice pair, although RMIR allows one to specify NECx2 using only a device number. 
