Adds MAXQ F12 and Pause protocols.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1320 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1087,6 +1087,7 @@ Code.740=0B 19 11 80 0C E0 C0 08 31 04 08 01 77 02 8C 2B 31 3C 00 57 3C 11 78 9F
 Code.6805-C9=0B 1A 11 20 12 E0 C0 08 31 04 08 01 71 02 88 2B 67 00 00 00 00 00 11 19 5A B6 5B 48 B8 5B 2B 02 18 5A CD 01 83 CD 01 83 CD 01 8C 25 0A A6 45 AE 1F CD 01 9E 08 5A EB 81
 Code.6805-RC16/18=0F 25 11 20 0B 05 04 08 10 3A 68 01 69 3D 21 00 3F 54 19 5A B6 5B 48 B8 5B 2B 02 18 5A CD 01 AF 11 14 09 5A 10 33 54 26 07 A6 59 AE 17 CD 01 96 CD 01 89 24 E8 CC 01 AF
 Code.HCS08=20 10 22 47 11 05 04 08 02 75 00 CF 00 D2 02 7A 42 95 3F 56 19 60 B6 61 48 B8 61 2B 02 18 60 CD FF 5F 09 60 0F 33 56 26 06 45 6A 00 CD FF 74 CD FF 92 25 EB CC FF 5F
+Code.MAXQ610=32 69 11 10 30 00 10 00 10 00 30 00 17 05 00 00 00 00 31 0D 00 80 1C 11 D2 D1 01 07 D2 D2 D1 17 D2 D2 FF 12 D2 D2 03 16 D2 D2 10 16 D0 D0 EF 05 D2 D2 D0 42 00 22 32 71 C6 00 02 00 00 00 80 32 71 0C 56 0C D2 10 10 96 00 62 10 95 00 02
 
 #******************************************************************************************
 #******************************************************************************************
@@ -2349,6 +2350,7 @@ Code.HCS08=20 03 00 00 01 A6 F4 AE 29 CD FF A1 3B 60 F6 81
 Code.6805-RC16/18=00 00 01 CD 01 8F A6 51 CD 01 95 3A 50 26 F7 81 
 Code.6805-C9=00 00 01 CD 01 92 A6 51 CD 01 9E 3A 50 26 F7 81 
 Code.740=00 00 01 A5 5D A0 50 22 42 16 D0 F9 60
+Code.MAXQ610=78 FF 01 04 00 00 E8 03 00 80 08 5A 00 00 00 58 FC D0 00
 Notes=This protocol allows you to insert a variable length pause inside \
 a macro.  To use this protocol, you have to install both the Device \
 Upgrade and the Protocol Upgrade.\
