Removed MZC-88 to resolve conflict with PID 0155.  Added Variant=JP1 to 011F Panasonic MIX  0140 NECx Combo  0141 HK Combo  0142 Sony DSP  0145 Replay TV  01D0 Pioneer 4DEV  01EF IOData
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1344 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1257,6 +1257,7 @@ Code.HCS08=20 10 2E 5E 11 05 04 08 05 D8 00 00 00 00 05 D9 17 8E 33 60 33 61 CD 
 
 [HK Combo]
 PID=01 41
+VariantName=JP1
 CmdTranslator=Translator(lsb,0,1,0) Translator(lsb,comp,1,8,8)
 CmdParms=Device :128.112|130.114=0,OBC=0
 FixedData=FE F1
@@ -1280,6 +1281,7 @@ Code.S3C80=2C 5E 42 8B 0E 8F 00 08 08 00 34 00 00 00 00 00 26 B5 73 F6 01 46 56 
 
 [IODATA]
 PID=01 EF
+VariantName=JP1
 DevParms=Device:7=81,Sub Device:7=75,n:4=1,x:7=0,y:7=0
 DeviceTranslator=Translator(lsb,2,4) Translator(lsb,3,7,8) Translator(lsb,0,7,16) \
                  Translator(lsb,1,7,24) Translator(lsb,4,7,32) 
@@ -1626,11 +1628,6 @@ Code.S3C80=4E A2 52 8B 0E C5 40 08 08 00 96 01 B8 00 96 04 1A 69 00 A6 0D 02 EB 
 Code.HCS08=20 11 28 52 52 C5 40 08 08 00 95 01 CC 00 95 04 2E 68 F6 B6 B2 A1 02 26 03 6E 06 B2 B6 66 B7 56 A4 03 97 8C E6 60 B7 60 3F 69 CD FF 86 1D AB 1C A2 CD FF 62 CD FF 56 1D A2 CD FF 62 6E 02 55 AD 3B 0F 56 03 00 69 20 45 D1 60 CD FF 74 3B 55 EF 45 3C 8C CD FF 74 45 00 01 CD FF 74 11 25 AD 1C 01 69 CA 0E 56 01 81 4E 64 65 1D AB 1C A2 45 00 01 CD FF 74 11 25 CD FF 5F CC FF 5F CD FF 92 25 02 10 69 81 
 Code.MAXQ610=3B 7A 52 10 0A 00 1E 00 0A 00 46 00 F2 06 0A 00 41 06 28 20 00 80 08 16 D7 D6 03 53 D0 D0 D7 E2 04 22 70 75 0C 56 0C BA 01 16 BA BA FE 5A 1D 00 00 E3 08 82 80 70 75 08 5A 0D 00 00 30 94 C3 0A E3 04 02 01 70 74 08 55 08 D6 80 15 BB BB 01 33 
 
-[MZC-88]
-PID=01 55
-Code.S3C80=42 8E 04 8B 12 CC 45 00 08 01 16 01 06 01 16 03 31 D2 F0 11 A6 08 B7 08 03 F6 FF 36 09 03 08 04 F6 FF 36 09 04 08 05 F6 FF 36 09 05 08 06 F6 FF 36 09 06 8D 01 46 60 C0 1C 08 C0 C0 10 07 1A FA 08 07 AF
-Code.HCS08=20 15 22 48 04 CC 45 00 08 01 16 01 1A 01 16 03 45 D2 F0 11 A6 08 CB B6 60 AD 17 B7 60 B6 61 AD 11 B7 61 B6 62 AD 0B B7 62 B6 63 AD 05 B7 63 CC FF 5F 43 AE 08 44 39 64 5B FB B6 64 81
-
 [NEC 2DEV Combo]
 PID=01 1A
 DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2]
@@ -1816,6 +1813,7 @@ Code.HCS08=20 15 23 46 31 C7 4D 08 08 01 21 01 11 01 21 03 44 D2 DC 11 94 08 CA 
 
 [NEC Combo]
 PID=01 40
+VariantName=JP1
 DevParms=Device Code=184,NEC2:bool
 DeviceTranslator=Translator(lsb,comp,0,8,8) Translator(1,1,7)
 CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
@@ -2049,6 +2047,7 @@ Code.MAXQ610=34 6D 51 0E 10 00 10 00 10 00 30 00 AA 0A 80 00 40 00 00 80 08 07 D
 [Panasonic MIX Combo]
 OldNames=Panasonic MIX Combo (*)
 PID=01 1F
+VariantName=JP1
 DevParms=Device1,Dev2 / Sub2,Dev3 / Sub3,Dev4 / Sub4,Dev5 / Sub5,Sub-Dev6
 DeviceTranslator=Translator(lsb,comp,0,8,16) Translator(lsb,comp,1,8,24) \
                  Translator(lsb,comp,2,8,32) Translator(lsb,comp,3,8,40) \
@@ -2770,6 +2769,7 @@ Code.HCS08=20 15 21 43 32 E5 44 08 08 01 03 03 2A 01 03 01 13 AD A4 10 A8 08 57 
 
 [Pioneer 4DEV]
 PID=01 D0
+VariantName=JP1
 DevParms=Device 1=162,Device 2=165,Device 3=164,Device 4=160
 DeviceTranslator=Translator(lsb,0,8,0) Translator(lsb,1,8,8,) Translator(lsb,2,8,16) Translator(lsb,3,8,24)
 FixedData=45 A5 25 05
@@ -3421,6 +3421,7 @@ Code.6805-C9=0d 1c 31 a6 60 bd b7 a6 02 ae 18 cd 01 9f 9d 9d cd 01 92 a6 04 97 a
 [ReplayTV (Advanced)]
 OldNames=ReplayTV Hacked,ReplayTV 1994
 PID=01 45
+VariantName=JP1
 CmdTranslator=Translator()
 CmdParms=OBC=0
 Notes=hacked version
@@ -3873,6 +3874,7 @@ Code.MAXQ610=30 64 42 0E 30 00 18 00 18 00 18 00 08 07 60 00 18 00 02 41 01 83 1
 
 [Sony DSP]
 PID=01 42
+VariantName=JP1
 CmdTranslator=Translator(lsb)
 CmdParms=OBC=0
 Notes=If your learned signal decode displays 3 repeats of Sony15 36,96, then 3 Sony8 entries followed by one more Sony15 entry, then you need to use this Sony DSP protocol. \n\n\
