Adds PID 01ED:2  Vudu IR protocol irp is {40.5k,555}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,F:4,~F:4:4,1,^108m,(16,-4,1,^108m)*)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1346 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -4090,6 +4090,19 @@ Code.6805-C9=09 10 01 20 0C A0 E1 00 12 00 05 03 32 04 52 06 CF CC 01 83
 Code.6805-RC16/18=0B 1D 01 20 0C 84 41 00 05 01 53 AA 02 53 A9 05 A6 CC 01 AF
 Code.HCS08=20 11 1A 35 01 84 41 00 05 00 A6 03 53 00 A6 05 51 0B 4B CC FF 5F
 
+[Vudu]
+#irp = {40.5k,555}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,F:4,~F:4:4,1,^108m,(16,-4,1,^108m)*)
+PID=01 ED
+VariantName=2
+CmdParms=OBC:8=0
+CmdTranslator=Translator(0,8,lsb,comp)
+DefaultCmd=00
+DevParms=Device:8=42, Subdevice:8=213
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) Translator(2,8,16)
+FixedData=AB 54 80
+Code.S3C80=40 84 31 8b 13 ce 44 08 08 01 21 03 30 01 21 00 fd d2 dc 11 94 08 b6 08 20 11 e4 06 07 f0 07 b6 07 0f f6 01 46 f6 01 0a 7b 01 af e6 28 c1 e6 29 45 cf c0 20 c0 21 e6 12 01 e4 05 03 8d 01 46
+Code.MAXQ610=30 64 31 14 17 00 43 00 17 00 16 00 e0 10 68 01 b4 00 00 00 68 01 5a 00 00 80 0c 00 d4 d3 00 51 d4 d4 00 17 d4 d4 0f 62 44 44 70 71 73 74 62 55 01 02
+
 [X10]
 PID=01 DF 
 CmdParms=OBC:8 
