- Add FixedDataMask entry for Samsung36 protocol in protocols.ini (Graham) - Update to build 3 (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1369 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -3534,6 +3534,7 @@ CmdTranslator=Translator(lsb,0)
 DefaultCmd=00
 CmdIndex=0
 FixedData=20 00 00
+FixedDataMask=FF FF F0
 Code.S3C80=43 8C 31 8B 12 8F 45 08 04 00 FA 02 CD 00 FA 00 E5 77 6F 08 CF 08 B4 E4 06 07 60 07 F0 05 0C 04 10 07 10 06 10 05 0A F8 20 10 E6 25 11 8D 01 61
 Code.HCS08=20 15 22 48 31 87 45 08 04 00 FA 02 E1 00 FA 00 F9 77 6F 08 CF 08 C8 4E 63 64 33 64 B6 62 62 B7 62 AE 04 39 64 39 63 39 62 5B F8 3C A9 6E 11 7D CC FF 7A
 Code.MAXQ610=33 69 31 18 13 00 38 00 13 00 13 00 14 09 AB 00 AB 00 00 00 00 00 00 00 13 00 AB 00 00 00 44 54 05 00 90 70 71 32 73 F3
